// Nexus Réussite Database Schema
// Generated on 2025-07-24 22:28:27

Table students {
  id int [pk]
  full_name varchar [not null]
  email varchar [not null, unique]
  phone varchar
  grade_level varchar [not null]
  school varchar
  preferred_subjects text
  learning_style varchar
  cognitive_profile text
  performance_data text
  created_at datetime
  updated_at datetime
  is_active boolean
}

Table learning_sessions {
  id int [pk]
  student_id int [not null]
  subject varchar [not null]
  topic varchar [not null]
  session_type varchar [not null]
  duration_minutes int
  aria_recommendations text
  interaction_data text
  performance_metrics text
  completion_rate float
  accuracy_rate float
  difficulty_level varchar
  started_at datetime
  completed_at datetime
  created_at datetime
}

Table assessments {
  id int [pk]
  student_id int [not null]
  title varchar [not null]
  subject varchar [not null]
  assessment_type varchar [not null]
  questions_data text [not null]
  answers_data text
  score float
  detailed_results text
  aria_feedback text
  next_steps text
  created_at datetime
  completed_at datetime
  is_completed boolean
}

Table aria_interactions {
  id int [pk]
  student_id int [not null]
  interaction_type varchar [not null]
  user_input text
  aria_response text [not null]
  context_data text
  confidence_score float
  processing_time_ms int
  feedback_rating int
  created_at datetime
}

Table users {
  id int [pk]
  email varchar [not null, unique]
  password_hash varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  phone varchar
  avatar_url varchar
  role varchar [not null]
  status varchar
  last_login datetime
  email_verified boolean
  email_verification_token varchar
  password_reset_token varchar
  password_reset_expires datetime
  preferences json
  timezone varchar
  language varchar
  created_at datetime
  updated_at datetime
}

Table student_profiles {
  id int [pk]
  user_id int [not null, unique]
  grade_level varchar [not null]
  school varchar
  specialties json
  learning_style varchar
  cognitive_profile json
  performance_data json
  goals json
  interests json
  motivation_level varchar
  parent_ids json
  created_at datetime
  updated_at datetime
}

Table parent_profiles {
  id int [pk]
  user_id int [not null, unique]
  profession varchar
  address text
  emergency_contact varchar
  children_ids json
  preferred_contact_method varchar
  notification_preferences json
  report_frequency varchar
  created_at datetime
  updated_at datetime
}

Table teacher_profiles {
  id int [pk]
  user_id int [not null, unique]
  subjects json [not null]
  qualifications json
  experience_years int
  is_aefe_certified boolean
  is_nsi_diu boolean
  can_teach_online boolean
  can_teach_in_person boolean
  preferred_formats json
  hourly_rate_online float
  hourly_rate_in_person float
  hourly_rate_group float
  default_availability json
  max_hours_per_week int
  rating float
  total_reviews int
  total_hours_taught int
  bio text
  specialties_description text
  hire_date varchar
  is_active_teacher boolean
  created_at datetime
  updated_at datetime
}

Table admin_profiles {
  id int [pk]
  user_id int [not null, unique]
  permissions json
  department varchar
  is_super_admin boolean
  can_manage_users boolean
  can_manage_content boolean
  can_view_reports boolean
  can_manage_billing boolean
  created_at datetime
  updated_at datetime
}

Table user_sessions {
  id int [pk]
  user_id int [not null]
  session_token varchar [not null, unique]
  refresh_token varchar [unique]
  expires_at datetime [not null]
  ip_address varchar
  user_agent varchar
  device_type varchar
  location varchar
  is_active boolean
  last_activity datetime
  created_at datetime
}

Table parent_child_relations {
  id int [pk]
  parent_user_id int [not null]
  child_user_id int [not null]
  relation_type varchar
  is_primary_contact boolean
  can_view_grades boolean
  can_book_sessions boolean
  can_receive_reports boolean
  confirmed_at datetime
  created_at datetime
}

Table formulas {
  id int [pk]
  name varchar [not null]
  type varchar [not null]
  level varchar [not null]
  price_dt float [not null]
  hours_per_month int [not null]
  max_students int
  description text
  features json
  supports_online boolean
  supports_in_person boolean
  created_at datetime
  updated_at datetime
}

Table locations {
  id int [pk]
  name varchar [not null]
  capacity int [not null]
  address varchar
  equipment json
  is_active boolean
  created_at datetime
  updated_at datetime
}

Table availabilities {
  id int [pk]
  teacher_id int [not null]
  start_time datetime [not null]
  end_time datetime [not null]
  is_for_in_person boolean [not null]
  is_recurring boolean
  recurring_pattern json
  is_booked boolean
  created_at datetime
  updated_at datetime
}

Table bookings {
  id int [pk]
  student_id int [not null]
  teacher_id int [not null]
  availability_id int
  start_time datetime [not null]
  end_time datetime [not null]
  format varchar [not null]
  location_id int
  subject varchar [not null]
  topic varchar
  description text
  duration_minutes int
  status varchar
  booking_notes text
  cancellation_reason varchar
  meeting_url varchar
  meeting_password varchar
  created_at datetime
  updated_at datetime
  created_by varchar
}

Table session_reports {
  id int [pk]
  booking_id int [not null]
  topics_covered json
  student_performance int
  participation_level varchar
  comprehension_level varchar
  teacher_notes text
  homework_assigned text
  next_session_recommendations text
  parent_feedback_requested boolean
  created_at datetime
  teacher_id int [not null]
}

Table groups {
  id int [pk]
  name varchar [not null]
  subject varchar [not null]
  level varchar [not null]
  max_students int
  current_students int
  teacher_id int [not null]
  default_location_id int
  supports_online boolean
  schedule json
  created_at datetime
}

Table teachers {
  id int [pk]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  phone varchar
  subjects json
  qualifications json
  experience_years int
  is_aefe_certified boolean
  is_nsi_diu boolean
  can_teach_online boolean
  can_teach_in_person boolean
  hourly_rate_online float
  hourly_rate_in_person float
  created_at datetime
}

Table enrollments {
  id int [pk]
  student_id int [not null]
  formula_id int [not null]
  group_id int
  teacher_id int
  start_date varchar [not null]
  end_date varchar
  is_active boolean
  preferred_format varchar
  created_at datetime
}

Table individual_sessions {
  id int [pk]
  student_id int [not null]
  teacher_id int [not null]
  subject varchar [not null]
  scheduled_at datetime [not null]
  duration_minutes int
  format varchar
  location_id int
  status varchar
  topics_covered json
  homework_assigned text
  teacher_notes text
  student_performance int
  meeting_url varchar
  created_at datetime
}

Table group_sessions {
  id int [pk]
  group_id int [not null]
  subject varchar [not null]
  scheduled_at datetime [not null]
  duration_minutes int
  format varchar
  location_id int
  status varchar
  topics_covered json
  homework_assigned text
  teacher_notes text
  meeting_url varchar
  created_at datetime
}

Table session_attendances {
  id int [pk]
  session_id int [not null]
  student_id int [not null]
  is_present boolean
  participation_score int
  individual_notes text
  created_at datetime
}

Table weekly_reports {
  id int [pk]
  student_id int [not null]
  week_start_date varchar [not null]
  week_end_date varchar [not null]
  subjects_progress json
  aria_insights text
  teacher_comments json
  next_week_objectives json
  parent_feedback text
  is_sent_to_parents boolean
  created_at datetime
}

Table parent_communications {
  id int [pk]
  student_id int [not null]
  sender_type varchar [not null]
  sender_id int [not null]
  recipient_type varchar [not null]
  recipient_id int [not null]
  subject varchar [not null]
  message text [not null]
  is_read boolean
  priority varchar
  created_at datetime
}

Table student_objectives {
  id int [pk]
  student_id int [not null]
  subject varchar [not null]
  objective_text text [not null]
  target_date varchar [not null]
  is_achieved boolean
  achievement_date varchar
  progress_percentage int
  created_by varchar [not null]
  created_at datetime
  updated_at datetime
}

// Relationships
Ref: learning_sessions.student_id > students.id
Ref: assessments.student_id > students.id
Ref: aria_interactions.student_id > students.id
Ref: student_profiles.user_id > users.id
Ref: parent_profiles.user_id > users.id
Ref: teacher_profiles.user_id > users.id
Ref: admin_profiles.user_id > users.id
Ref: user_sessions.user_id > users.id
Ref: parent_child_relations.parent_user_id > parent_users.id
Ref: parent_child_relations.child_user_id > child_users.id
Ref: availabilities.teacher_id > teachers.id
Ref: bookings.student_id > students.id
Ref: bookings.teacher_id > teachers.id
Ref: bookings.availability_id > availabilitys.id
Ref: bookings.location_id > locations.id
Ref: session_reports.booking_id > bookings.id
Ref: session_reports.teacher_id > teachers.id
Ref: groups.teacher_id > teachers.id
Ref: groups.default_location_id > default_locations.id
Ref: enrollments.student_id > students.id
Ref: enrollments.formula_id > formulas.id
Ref: enrollments.group_id > groups.id
Ref: enrollments.teacher_id > teachers.id
Ref: individual_sessions.student_id > students.id
Ref: individual_sessions.teacher_id > teachers.id
Ref: individual_sessions.location_id > locations.id
Ref: group_sessions.group_id > groups.id
Ref: group_sessions.location_id > locations.id
Ref: session_attendances.session_id > sessions.id
Ref: session_attendances.student_id > students.id
Ref: weekly_reports.student_id > students.id
Ref: parent_communications.student_id > students.id
Ref: student_objectives.student_id > students.id
